# ferris-advisor

./: .gitignore  Cargo.toml  Dockerfile.dev  README.md  docker-compose-dev.yml  rustfmt.toml  tailwind.config.js
.cargo/: config.toml
model/: Cargo.toml
model/src/: data_processing.rs  lib.rs  main.rs  model.rs  utils.rs
src/: app.rs  lib.rs  main.rs
src/api/: assets.rs  mod.rs  model.rs
src/components/: api.rs  graphs.rs  mod.rs  model_info.rs  price_graph.rs  selector.rs
src/pages/: home.rs  mod.rs  not_found.rs
src/service/: config.rs  mod.rs  routes.rs  server.rs
src/services/: kraken.rs  mod.rs  server.rs  yahoo.rs
src/wrappers/: config.rs  server.rs
