[package]
name = "ferris-advisor"
version = "0.1.0"
edition = "2021"
authors = ["Vinicios Lugli <vinicioslugli@gmail.com>"]
description = "Decision support system for investing in crypto assets."
license = "GPL-3.0"
repository = "https://github.com/ViniciosLugli/ferris-advisor"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"

leptos = { version = "0.6.15", features = ["nightly", "experimental-islands"] }
leptos_meta = { version = "0.6.15" }
leptos_router = { version = "0.6.15" }
leptos_actix = { version = "0.6.15", optional = true, features = [
	"experimental-islands",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }

actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.9.0", optional = true, features = ["macros"] }

charming = { version = "0.3.1", features = ["wasm"] }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
	"dep:wasm-bindgen",
	"dep:console_error_panic_hook",
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
]
ssr = [
	"dep:actix-files",
	"dep:actix-web",
	"dep:leptos_actix",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]


[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
debug = 0

[profile.release]
panic = "abort"

[package.metadata.leptos]
output-name = "ferris-advisor"

site-root = "target/site"
site-pkg-dir = "pkg"

style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.scss"
tailwind-config-file = "tailwind.config.js"
assets-dir = "public"

site-addr = "0.0.0.0:3333"
reload-port = 3001

browserquery = "defaults"
env = "PROD"

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[workspace]
members = ["model"]
