[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.41.3", features = ["lazy", "ndarray", "csv"] }
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
tch = { version = "0.17.0", features = ["download-libtorch"] }
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.11.5"
